set cors config for everything